2008-06-23  Jürg Billeter  <j@bitron.ch>

	* vala/valasemanticanalyzer.vala:
	* gobject/valaccodeclassbinding.vala:

	Support inherited interface implementation, fixes bug 536863

2008-06-22  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodedynamicmethodbinding.vala:
	* gobject/valaccodedynamicsignalbinding.vala:
	* gobject/valaccodegenerator.vala:
	* gobject/valaccodegeneratorsignal.vala:
	* gobject/valaccodeobjecttypesymbolbinding.vala:

	Improve support for arrays as paramters and return values of
	methods and signals exported over D-Bus, fixes part of bug 539357

2008-06-22  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodeobjecttypesymbolbinding.vala:

	Use CamelCase for properties exported to D-Bus

2008-06-22  Jürg Billeter  <j@bitron.ch>

	* vala/valasemanticanalyzer.vala:
	* gobject/valaccodeinvocationexpressionbinding.vala:

	Fix pointer member access to value types, fixes bug 539337

2008-06-22  Jaap A. Haitsma  <jaap@haitsma.org>

	* vapi/packages/gio-2.0/gio-2.0.metadata:
	g_app_info_launch_default_for_uri.launch_context is nullable.
	Fixes bug #539618
	* vapi/gio-2.0.vapi: Regenerated

2008-06-22  Jürg Billeter  <j@bitron.ch>

	* vapi/glib-2.0.vapi:

	Use G_TYPE_INT as type_id for int32

2008-06-21  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gstreamer-0.10/:

	Fix GstStaticCaps and GstStaticPadTemplate bindings,
	fixes bug 539283

	* vapi/gstreamer-0.10.vapi: regenerated

2008-06-21  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodegenerator.vala:

	Fix using static methods as delegates, fixes bug 539277

2008-06-21  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gstreamer-0.10/:

	Fix gst_*_parse_* bindings, patch by Zeeshan Ali Khattak,
	fixes bug 539177

	* vapi/gstreamer-0.10.vapi: regenerated

2008-06-21  Jared Moore  <jaredm@svn.gnome.org>

	* gobject/valaccodeclassbinding.vala:

	Initialize class fields in class init function

	* gobject/valaccodegenerator.vala:
	* gobject/valaccodememberaccessbinding.vala:
